# mindxsdk-referenceapps

./: License.md  OWNERS  README.en.md  README.md  README.zh.md  build_all.sh
contrib/BertTextClassification/mxBase/: CMakeLists.txt  build.sh  main.cpp
contrib/CarPlateRecognition/: CMakeLists.txt  README.md  build.sh
contrib/CarPlateRecognition/include/: CvxText.h  carplate_recognition.h  cvx_text.h  initparam.h  lpr_postprocess.h  retinaface_postprocess.h
contrib/CarPlateRecognition/model/: lpr.aippconfig  pth2onnx.py  retinaface.aippconfig  retinaface.om
contrib/CarPlateRecognition/src/: CvxText.cpp  carplate_recognition.cpp  cvx_text.cpp  lpr_postprocess.cpp  main.cpp  retinaface_postprocess.cpp
contrib/CartoonGANPicture/: CMakeLists.txt  README.md  build.sh  main.cpp
contrib/CartoonGANPicture/CartoonGANPicture/: CartoonGANPicture.cpp  CartoonGANPicture.h
contrib/CenterFaceWithDynamicResolution/C++/: CMakeLists.txt  build.sh  main.cpp
contrib/CrowdCounting/: CMakeLists.txt  README.md  build.sh  main.cpp
contrib/CrowdCounting/CrowdCount/: .CrowdCount.cpp.swp  CrowdCount  CrowdCount.cpp  CrowdCount.h
contrib/CrowdCounting/CrowdCountPostProcess/: CrowdCountPostProcess.cpp  CrowdCountPostProcess.h
contrib/CrowdCounting/model/: insert_op.cfg
contrib/EdgeDetectionPicture/: CMakeLists.txt  License  README.md  build.sh  main.cpp
contrib/EdgeDetectionPicture/model/: aipp.cfg
contrib/EdgeDetectionPicture/precisionCode/: README.md  main.py
contrib/EdgeDetectionPicture/rcfDetection/: RcfDetection.cpp  RcfDetection.h
contrib/EdgeDetectionPicture/rcfPostProcess/: RcfPostProcess.cpp  RcfPostProcess.h
contrib/MediaCodeV2/mxbase/: CMakeLists.txt  MediaCodecV2.cpp  MediaCodecV2.h  build.sh  mainV2.cpp  run.sh  show.sh  stop.sh
contrib/MultiChannelVideoDetection/: CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
contrib/MultiChannelVideoDetection/BlockingQueue/: BlockingQueue.h
contrib/MultiChannelVideoDetection/ImageResizer/: ImageResizer.cpp  ImageResizer.h
contrib/MultiChannelVideoDetection/MultiChannelVideoReasoner/: MultiChannelVideoReasoner.cpp  MultiChannelVideoReasoner.h
contrib/MultiChannelVideoDetection/StreamPuller/: StreamPuller.cpp  StreamPuller.h
contrib/MultiChannelVideoDetection/Util/: Util.cpp  Util.h
contrib/MultiChannelVideoDetection/VideoDecoder/: VideoDecoder.cpp  VideoDecoder.h
contrib/MultiChannelVideoDetection/YoloDetector/: YoloDetector.cpp  YoloDetector.h
contrib/OpenCVPlugin/OpenCVPlugin/: CMakeLists.txt
contrib/OpenposePlugin/mindx_sdk_plugin/: CMakeLists.txt  MxpiOpenposePlugin.cpp  MxpiOpenposePlugin.h  MxpiOpenposePostProcess.cpp  MxpiOpenposePostProcess.h
contrib/RTMHumanKeypointsDetection/: CMakeLists.txt  README.md  build.sh  main.cpp
contrib/RTMHumanKeypointsDetection/eval/: eval.py
contrib/RTMHumanKeypointsDetection/models/: insert_op.cfg
contrib/RTMHumanKeypointsDetection/pipeline/: rtmOpenpose.pipeline
contrib/RTMHumanKeypointsDetection/plugins/: CMakeLists.txt  MxpiRTMOpenposePostProcess.cpp  MxpiRTMOpenposePostProcess.h  build.sh
contrib/RTMHumanKeypointsDetection/test/: main.cpp
contrib/SentimentAnalysis/mxBase/: CMakeLists.txt  build.sh  main.cpp
contrib/VehicleCounting/: CMakeLists.txt  README.md  build.sh  main.cpp  params.config  run.sh
contrib/VehicleCounting/BlockingQueue/: BlockingQueue.h
contrib/VehicleCounting/ReadConfig/: GetConfig.cpp  GetConfig.h
contrib/VehicleCounting/VideoProcess/: DataType.h  Hungarian.cpp  Hungarian.h  KalmanTracker.cpp  KalmanTracker.h  MOTConnection.cpp  MOTConnection.h  VideoProcess.cpp  VideoProcess.h
contrib/VehicleCounting/Yolov4Detection/: Yolov4Detection.cpp  Yolov4Detection.h
contrib/VehicleCounting/model/: aipp_yolov4_608_608.config
contrib/VehicleIdentification/vehiclePostProcess/: CMakeLists.txt  VehiclePostProcess.cpp  VehiclePostProcess.h
contrib/VideoGestureRecognition/: CMakeLists.txt  README.md  build.sh  main.cpp  run.sh  sample
contrib/VideoGestureRecognition/BlockingQueue/: BlockingQueue.h
contrib/VideoGestureRecognition/FrameSkippingSampling/: FrameSkippingSampling.cpp  FrameSkippingSampling.h
contrib/VideoGestureRecognition/ImageResizer/: ImageResizer.cpp  ImageResizer.h
contrib/VideoGestureRecognition/MultiChannelVideoReasoner/: MultiChannelVideoReasoner.cpp  MultiChannelVideoReasoner.h
contrib/VideoGestureRecognition/ResnetDetector/: ResnetDetector.cpp  ResnetDetector.h
contrib/VideoGestureRecognition/StreamPuller/: StreamPuller.cpp  StreamPuller.h
contrib/VideoGestureRecognition/Util/: Util.cpp  Util.h
contrib/VideoGestureRecognition/VideoDecoder/: VideoDecoder.cpp  VideoDecoder.h
contrib/VideoGestureRecognition/VideoGestureReasoner/: VideoGestureReasoner.cpp  VideoGestureReasoner.h
contrib/VideoGestureRecognition/data/: gesture_test1.264  gesture_test2.264  gesture_test3.264
contrib/VideoGestureRecognition/model/: resnet18.cfg  resnet18.names
contrib/human_segmentation/: .bashrc  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh  sample  test.pipeline
contrib/human_segmentation/human_segmentation/: CMakeLists.txt  README.md  main.cpp
mxVision/AllObjectsStructuring/: CMakeLists.txt  README.md  build.sh  main.py  requirements.txt  run.sh
mxVision/AllObjectsStructuring/Proto/: CMakeLists.txt  MxpiAllObjectsStructuringDataType.proto
mxVision/AllObjectsStructuring/main_pipeline/: main_pipeline.py
mxVision/AllObjectsStructuring/pipeline/: AllObjectsStructuring.pipeline  face_registry.pipeline
mxVision/AllObjectsStructuring/retrieval/: feature_retrieval.py  register.py
mxVision/AllObjectsStructuring/util/: __init__.py  arguments.py  channel_status.py  checker.py  display.py  main_entry.py  multi_process.py  pipeline.py  (+1 more)
mxVision/AllObjectsStructuringV2/: BlockingQueue.h  CMakeLists.txt  README.MD  main.cpp
mxVision/YoloV3Infer/: CMakeLists.txt  README.md  main.cpp  run.sh
tutorials/DvppWrapperSample/: CMakeLists.txt  README.md  main.cpp
tutorials/SamplePostProcess/: CMakeLists.txt  Sample_new.pipeline
tutorials/mindx_sdk_plugin/: CMakeLists.txt  sample_plugin.pipeline
(+1879 files in other folders)
